Integrate chart.js with product details page
And some minor changes as well. Leaving chart.html and associated views as a reference for future attempts.

--- a/main/templates/main/account_details.html
+++ b/main/templates/main/account_details.html
@@ -1,5 +1,7 @@
 {% extends "main/base.html" %}
 
 {% block content %}
+<div class="col-6 mx-auto">
     <h1>Hi {{ user.username }}, this part is still tbc</h1>
+</div>
 {% endblock %}
