--- a/main/templates/main/contact_form.html
+++ b/main/templates/main/contact_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="col-6 mx-auto">
 
     {% if title %}
         <h1>{{ title }}</h1>
