Rename m2m through model to Quantity
Changed associated pieces of code and left JS playground in chart.html untouched.

--- a/main/templates/main/chart.html
+++ b/main/templates/main/chart.html
@@ -54,19 +54,54 @@
         <script>
             const canvas = document.getElementById("myCanvas");
             const context = canvas.getContext("2d");
-
-
-            function blob(x, y, size, color){
-                context.beginPath();
-                context.arc(x, y, size, 0, 2*Math.PI);
-                context.fillStyle = color;
-                context.fill();
-                context.stroke();
+            const blobCount = 10;
+            const colors = new Array('red','purple','yellow','blue','green','orange','pink','black');
+            let blobs = new Array();
+            class Blob {
+                constructor(color, size){
+                    this.x = Math.random() * canvas.width;
+                    this.y = Math.random() * canvas.height;
+                    this.color = color;
+                    this.size = size;
+                    this.xChange = Math.random();
+                    this.yChange = Math.random();
+                }
+                move(){
+                    if ((this.x + this.size) >= canvas.width || (this.x - this.size) <= 0) {
+                    this.xChange *= -1
+                    }
+                    if((this.y + this.size) >= canvas.height || (this.y - this.size) <= 0){
+                        this.yChange *= -1
+                    }
+                    this.x = this.x + this.xChange;
+                    this.y = this.y + this.yChange;
+                }
+                draw(){
+                    context.beginPath();
+                    context.arc(this.x, this.y, this.size, 0, 2*Math.PI);
+                    context.fillStyle = this.color;
+                    context.fill();
+                    context.stroke();
+                }
             }
 
-            blob(25, 25, 20, "red");
-            blob(60, 40, 20, "green");
-            blob(170, 110, 40, "blue");
+            function randomChoice(arr){
+                return arr[Math.floor(Math.random()*arr.length)]
+            }
+
+            for (let i=0; i<blobCount; i++){
+                let randomColor = randomChoice(colors);
+                blobs.push(new Blob(randomColor, 25))
+            }
+
+            function canvasDraw(){
+                context.clearRect(0, 0, canvas.width, canvas.height);
+                blobs.forEach(function(obj){
+                    obj.draw();
+                    obj.move();
+                })
+            }
+            setInterval(canvasDraw, 10);
         </script>
     </div>
 </div>
