Add base recipe form, view and template
So far without most important part - quantity implementation

--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Add recipe</a>
+          <a class="nav-link" href="/add-recipe" tabindex="-1">Add recipe</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
