--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -7,7 +7,7 @@
     {% if title %}
         <h1>{{ title }}</h1>
     {% endif %}
-
+    {{added}}
     <br>
 
     <form method="POST" action="."> {% csrf_token %}
