--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -16,8 +16,20 @@
                 <p class="card-text">Calory value : {{ prod.ingredient_calval}} cal/100g<br>
                 Short description of this ingredient</p>
                 <p class="card-text"><small class="text-muted">Price: {{prod.ingredient_price}} pln/kg</small></p>
-                  <a href="#"><button type="button" class="btn btn-outline-success">Add to you mix</button></a>
+                  <div class="row">
+                      {% if prod.ingredient_name not in added %}
+                      <form action="." method="post">{% csrf_token %}
+                      <button type="submit" class="btn btn-outline-success" name="add" value="added">Add to your recipe</button>
+                      <input type="hidden" name='ingredient' value="{{prod.ingredient_name}}">
+                      </form>
+                      {% else %}
+                      <form action="." method="post">{% csrf_token %}
+                      <button type="submit" class="btn btn-outline-danger" name="delete" value="deleted">Delete from recipe</button>
+                      <input type="hidden" name='ingredient' value="{{prod.ingredient_name}}">
+                      </form>
+                      {% endif %}
                   <a href="{{prod.ingredient_slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
+                  </div>
               </div>
             </div>
           </div>
