--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -2,17 +2,27 @@
 
 {% block content %}
 
-    <div class="col-6 mx-auto">
+    <div class="col-8 mx-auto">
 
     {% if title %}
         <h1>{{ title }}</h1>
     {% endif %}
-    {{added}}
+
     <br>
 
     <form method="POST" action="."> {% csrf_token %}
+            {{ form.name.label_tag }}
+            {{ form.name }}
 
-            {{ form.as_p }}
+            {% for form in formset %}
+            <br>
+            <div class="fieldWrapper">
+                 {{ form.ingredient }} {{form.quantity.label_tag}} {{form.quantity}}
+            </div>
+            <br>
+            {% endfor %}
+            {{ form.directions.label_tag }}
+            {{ form.directions }}
         <br>
         <button type="submit" class="btn btn-primary">Add</button>
     </form>
