--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -2,17 +2,13 @@
 
 {% block content %}
 
-    <div class="container">
-    <br>
-    <form method="POST" action=".">
-        {% csrf_token %}
-
-        {{ form.as_p }}
-        <br>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+    <div class="col-6 mx-auto mt-3">
+        <form method="POST" action=".">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary mb-3">Login</button>
+        </form>
+            If you don't already have an account, <a href="/register"><strong>register </strong></a>for one.
     </div>
-
-If you don't already have an account, <a href="/register"><strong>register</strong></a> for one.
 
 {% endblock %}
