--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -1,4 +1,5 @@
 {% extends 'main/base.html' %}
+{% load widget_tweaks %}
 
 {% block content %}
 
@@ -11,20 +12,51 @@
     <br>
 
     <form method="POST" action="."> {% csrf_token %}
-            {{ form.name.label_tag }}
-            {{ form.name }}
 
-            {% for form in formset %}
-            <br>
-            <div class="fieldWrapper">
-                 {{ form.ingredient }} {{form.quantity.label_tag}} {{form.quantity}}
+            {% if form.non_field_errors %}
+                <div class="alert alert-danger" role="alert">
+                  {% for error in form.non_field_errors %}
+                    {{ error }}
+                  {% endfor %}
+                </div>
+            {% endif %}
+
+            <div class="fieldWrapper mb-3">
+                <h4>{{ form.recipe_name.label_tag }}</h4>
+                {% if form.is_bound %}
+                    {% if form.recipe_name.errors %}
+                        {% render_field form.recipe_name class="form-control is-invalid" %}
+                        {% for error in form.recipe_name.errors %}
+                            <div class="invalid-feedback">
+                              {{ error }}
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {% render_field form.recipe_name class="form-control is-valid" %}
+                    {% endif %}
+                {% else %}
+                    {% render_field form.recipe_name class="form-control" %}
+                {% endif %}
             </div>
-            <br>
+
+
+            <h4>List of ingredients:</h4>
+            <div class="alert alert-info" role="alert">
+                Add ingredients by browsing <a href="/products" class="alert-link">food cards</a> or use multiple choice menu below.
+            </div>
+            {{ formset.management_form }}
+            {% for form in formset %}
+            <div class="fieldWrapper my-3">
+                {{ form.ingredient }} {{form.quantity.label_tag}} {{form.quantity}}
+            </div>
             {% endfor %}
-            {{ form.directions.label_tag }}
-            {{ form.directions }}
-        <br>
-        <button type="submit" class="btn btn-primary">Add</button>
+
+            <div class="fieldWrapper">
+                <h4>{{ form.directions.label_tag }}</h4>
+                {{ form.directions }}
+            </div>
+
+        <button type="submit" class="btn btn-primary my-3">Add</button>
     </form>
     </div>
 
