Add dynamic queryset for select options

--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -54,18 +54,39 @@
                 <div class="col-3">
                     {{form.ingredient|as_crispy_field}}
                 </div>
-                <div class="col-6">
+                <div class="col-4">
                     <div class="input-group">
-                        {{form.quantity}}
-                        {% if form.ingredient.value in added %}
-                            <div class="input-group-append">
-                                <button class="btn btn-danger remove-form-row">-</button>
-                            </div>
+
+                        {% if form.is_bound %}
+                            {% if form.quantity.errors %}
+                                {% render_field form.quantity class="form-control is-invalid" %}
+                                {% for error in form.quantity.errors %}
+                                    <div class="input-group-append">
+                                        <button class="btn btn-danger remove-form-row">-</button>
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        {{ error }}
+                                    </div>
+                                {% endfor %}
+                            {% else %}
+                                {% render_field form.quantity class="form-control is-valid" %}
+                                <div class="input-group-append">
+                                    <button class="btn btn-danger remove-form-row">-</button>
+                                </div>
+                            {% endif %}
                         {% else %}
-                            <div class="input-group-append">
-                                <button class="btn btn-success add-form-row">+</button>
-                            </div>
+                            {% render_field form.quantity class="form-control" %}
+                            {% if form.ingredient.value in added %}
+                                <div class="input-group-append">
+                                    <button class="btn btn-danger remove-form-row">-</button>
+                                </div>
+                            {% else %}
+                                <div class="input-group-append">
+                                    <button class="btn btn-success add-form-row">+</button>
+                                </div>
+                            {% endif %}
                         {% endif %}
+
                     </div>
                 </div>
             </div>
@@ -78,9 +99,21 @@
                 {{ form.directions }}
             </div>
 
-        <button type="submit" class="btn btn-primary my-3">Add</button>
+        <button type="submit" class="btn btn-primary my-3">Create</button>
     </form>
+        <p><b>Results:</b> <span id="results"></span></p>
     </div>
-
+    <script>
+      function showValues() {
+        var fields = $( ":input" ).serializeArray();
+        $( "#results" ).empty();
+        jQuery.each( fields, function( i, field ) {
+            if(i>5)
+                $( "#results" ).append( i + " " + field.value + " " );
+        });
+      }
+      $( "select" ).change( showValues );
+      showValues();
+    </script>
 
 {% endblock %}
