--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -5,16 +5,16 @@
 <br>
 {% load static %}
     {% for prod in products %}
+    <div class="col-mb-5">
         <div class="card mb-3 mr-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img src="{% static prod.ingredient_image_src %}" class="card-img" alt="oatflakes">
+              <img src="{% static prod.ingredient_image_src %}" class="card-img">
             </div>
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">{{prod.ingredient_name}}</h5>
-                <p class="card-text">Calory value : {{ prod.ingredient_calval}} cal/100g<br>
-                Short description of this ingredient</p>
+                <p class="card-text">Calory value : {{ prod.ingredient_calval}} cal/100g</p>
                 <p class="card-text"><small class="text-muted">Price: {{prod.ingredient_price}} pln/kg</small></p>
                 <div class="container">
                   <div class="row">
@@ -35,6 +35,7 @@
                   </div>
             </div>
           </div>
+        </div>
         </div>
     {% endfor %}
 
