--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -2,13 +2,25 @@
 
 {% block content %}
 
-<div class="col-8 mx-auto">
+<div class="col-4 ">
+    <ul class="list-group">
+        <li class="list-group-item text-center"><strong>Ingredients</strong></li>
+        {% for ing in quantities %}
+            <li class="list-group-item">
+                <div class="row">
+                    <div class="col-sm-7">{{ing.ingredient}}</div>
+                    <div class="col-sm-5">{{ing.quantity}} grams</div>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="col-8 ">
     <img src="{{recipe.recipe_image.url}}" class="img-fluid" >
     <h1>{{recipe.recipe_name}}</h1><small> {{recipe.recipe_posted}}</small>
 
     {{recipe.directions|safe}}
-
-
 
 </div>
 
