--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -8,9 +8,10 @@
 {% block content %}
 
     <div class="col-8 mx-auto">
+
     <img src="{% static 'main/recipee.jpg' %}" class="img-fluid">
     {% if title %}
-        <h1 class="text-center mt-1">{{ title }}</h1>
+        <h1 style="position: absolute; top:0; right:0; left:0; bottom:0; margin:auto;" class="text-center mt-1">{{ title }}</h1>
     {% endif %}
 
     <br>
