--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -4,7 +4,7 @@
 
 <div class="col-4 ">
     <ul class="list-group">
-        <li class="list-group-item text-center"><strong>Ingredients</strong></li>
+        <li class="list-group-item text-center"><strong>Ingredients [for {{recipe.servings}} servings]</strong></li>
         {% for ing in quantities %}
             <li class="list-group-item">
                 <div class="row">
