--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -16,6 +16,7 @@
                 <p class="card-text">Calory value : {{ recipe.calories_per_serving}} cal/serving</p>
                 <p class="card-text"><small class="text-muted">Price: {{prod.ingredient_price}} pln/kg</small></p>
                   <a href="{{recipe.recipe_slug}}"><button type="button" class="btn btn-outline-info">See details</button></a>
+                  <a href="{{recipe.recipe_slug}}/edit"><button type="button" class="btn btn-outline-info">Edit</button></a>
               </div>
             </div>
           </div>
